<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.Indyuce</groupId>
	<artifactId>MMOCore</artifactId>
	<version>1.8.3</version>
	<name>MMOCore</name>
	<description>Offer your players a brand new RPG experience!!</description>

	<properties>
		<downloadSources>false</downloadSources>
		<downloadJavadocs>false</downloadJavadocs>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<distributionManagement>
		<repository>
			<id>nexus</id>
			<name>Lumine Releases</name>
			<url>https://mvn.lumine.io/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>nexus</id>
			<name>Lumine Snapshots</name>
			<url>https://mvn.lumine.io/repository/maven-snapshots/</url>
		</snapshotRepository>

	</distributionManagement>

	<build>
		<finalName>${project.name}-${project.version}</finalName>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>${basedir}/src/main/resources/</directory>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<configuration>
					<minimizeJar>false</minimizeJar>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<repositories>

		<repository>
			<id>lumine</id>
			<url>https://mvn.lumine.io/repository/maven/</url>
		</repository>

		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>

		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>

		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		
		<repository>
			<id>sk89q-repo</id>
			<url>https://maven.enginehub.org/repo/</url>
		</repository>
		
		<repository>
			<id>papermc</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
		
	</repositories>

	<dependencies>

		<!-- Spigot API -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-1.17.1</artifactId>
			<version>dev</version>
			<scope>provided</scope>
		</dependency>

		<!-- Public repos -->
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.9.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>io.lumine</groupId>
			<artifactId>MythicLib-dist</artifactId>
			<version>1.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>19.0.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>io.papermc</groupId>
			<artifactId>paperlib</artifactId>
			<version>1.0.5</version>
		</dependency>

		<dependency>
			<groupId>io.lumine</groupId>
			<artifactId>MythicMobs-Dist</artifactId>
			<version>5.0.0-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.20</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.sk89q.worldguard</groupId>
			<artifactId>worldguard-bukkit</artifactId>
			<version>7.0.2-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>net.citizensnpcs</groupId>
			<artifactId>Citizens</artifactId>
			<version>2.0.25</version>
            <scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>me.vagdedes.spartan</groupId>
			<artifactId>SpartanAPI</artifactId>
			<version>1.0</version>
            <scope>provided</scope>
		</dependency>

	</dependencies>
</project>
